feat: Refactor: Use the Fabricate API for all operations #126
- more UI integration progress

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -180,8 +180,8 @@
           },
           "settings": {
             "title": "Settings",
-            "enabled": {
-              "label": "Enabled",
+            "disabled": {
+              "label": "Disabled",
               "description": "Disabled systems cannot be used. Their components cannot be salvaged. Their recipes cannot be crafted."
             }
           }
