feat: Refactor: Use the Fabricate API for all operations #126
- changes to the component browser and API integration

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -62,6 +62,9 @@
           },
           "failure": "Failed to import crafting system \"{systemName}\"",
           "success": "Successfully imported crafting system \"{systemName}\", with {essenceCount} essences, {componentCount} components, and {recipeCount} recipes. "
+        },
+        "export": {
+          "craftingSystemNotFound": "The crafting system with ID {craftingSystemId} does not exist. "
         }
       },
       "errors": {
