feat: Refactor: Use the Fabricate API for all operations #126
- start integrating RecipeEditor.svelte
- fix RecipeBrowser.svelte

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -8,10 +8,7 @@
       "recipe": {
         "singular": "Recipe",
         "plural": "Recipes",
-        "ingredientOption": {
-          "name": "Option {number}"
-        },
-        "resultOption": {
+        "option": {
           "name": "Option {number}"
         }
       },
