--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -97,6 +97,18 @@
         "started": "Fabricate is migrating your crafting system settings. Please do close your browser or shut down the game world. ",
         "failed": "Fabricate was unable to migrate your crafting system settings. Please report this error to the module author. ",
         "success": "Fabricate has finished migrating your crafting system settings!"
+      },
+      "recipe": {
+        "updated": "Updated recipe \"{recipeName}\"",
+        "created": "Created recipe \"{recipeName}\""
+      },
+      "component": {
+        "updated": "Updated component \"{componentName}\"",
+        "created": "Created component \"{componentName}\""
+      },
+      "essence": {
+        "updated": "Updated essence \"{essenceName}\"",
+        "created": "Created essence \"{essenceName}\""
       }
     },
     "CraftingComponentCarousel": {
@@ -291,7 +303,7 @@
               "catalystsHeading": "Catalysts",
               "resultsHeading": "Results",
               "availableComponentsHeading": "Available Components",
-              "essencesHeading": "Required essences",
+              "essencesHeading": "Essences",
               "replaceItem": "Drop an item to replace",
               "newIngredientOption": "New",
               "newResultOption": "New",
