feat: Refactor: Use the Fabricate API for all operations #126
- integrates component editor and new UI

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -253,6 +253,8 @@
             "labels": {
               "salvageName": "Option name",
               "salvageHeading": "Salvage",
+              "resultsHeading": "Results",
+              "catalystsHeading": "Catalysts",
               "availableComponentsHeading": "Available Components",
               "essencesHeading": "Essences",
               "replaceItem": "Drop an item to replace",
