--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -129,6 +129,18 @@
         "unsalvageableComponent": "The component {componentName} has no usable salvage options.",
         "prepared": "A salvage attempt Prepared for {componentName} in {craftingSystemName}.",
         "invalidItemData": "The component with ID \"{componentId}\" has a problem with its item data. Caused by: {cause}"
+      },
+      "salvageResult": {
+        "multipleCraftingSystems": "This Salvage Result has components from multiple Crafting Systems. This is not supported, and possibly a bug. ",
+        "disabledCraftingSystem": "The crafting system {craftingSystemName} is disabled and cannot be used.",
+        "invalidItemData": "The components with IDs \"{componentIds}\" have problems with their item data. Resolve these before attempting this salvage again.",
+        "success": "Salvaged {componentName} in {craftingSystemName}."
+      },
+      "inventory": {
+        "error": {
+          "invalidActor": "The Actor this inventory was configured for is not valid.",
+          "componentNotFound": "The component with ID {componentId} could not be found."
+        }
       }
     },
     "CraftingComponentCarousel": {
