feat: Renders an empty actor crafting app window for patrons

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -192,6 +192,9 @@
         "unrecognisedComponent": "The Crafting Component {componentName} is not a part of this crafting system. "
       }
     },
+    "ActorCraftingApp": {
+      "title": "Fabricate | Crafting"
+    },
     "ComponentSalvageApp": {
       "title": "Fabricate | Component Salvage | {actorName}",
       "header": {
