feat: Actor Recipe Crafting App
- populate the Crafting Process ready to  render the UI

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -129,6 +129,7 @@
       }
     },
     "crafting": {
+      "recipeNotFound": "The recipe with id {recipeId} could not be found. ",
       "actorNotFound": "The Actor with id {actorId} could not be found. ",
       "disabledCraftingSystem": "{name} belongs to the crafting system {craftingSystemName}, which is disabled and cannot be used.",
       "salvage": {
